--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
     <!--Start Home Section-->
-    <section class="home svg_shape bg_image" id="home" style="background-image: url(assets/images/me-1.jpg)">
+    <section class="home svg_shape bg_image" id="home" style="background-image: url(assets/images/banner-me.jpg)">
         <div class="full_height">
 
             <!-- nav -->
@@ -139,7 +139,7 @@
             <div class="row">
                 <div class="col-md-5 about-img">
                     <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <img src="assets/images/me.jpg" alt="">
+                        <img src="assets/images/self.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-7 padding-left-25">
