changed Morgan to Michael Poole

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <h1 class="cd-headline letters rotate-2 is-full-width">
                             <span class="cd-words-wrapper">
                                 <b class="is-visible">Developer</b>
-                                <b>Problem Solver</b>
+                                <b>Designer</b>
                             </span>
                         </h1>
                     </div>
@@ -161,36 +161,6 @@
                         developer. Feel free to contact me about any of my projects,
                         I'd love to talk!
                     </p>
-                    <div class="follow-me animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <h6>Follow Me :</h6>
-                        <ul class="text-center list-unstyled social">
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-facebook fa-2x"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-twitter fa-2x"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-google-plus fa-2x"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-dribbble fa-2x"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-instagram fa-2x"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
                 <!--.col-sm-7-->
             </div>
@@ -408,7 +378,7 @@
     <!--Start Footer-->
     <footer>
         <div class="container text-center animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-            <h3>Morgan</h3>
+            <h3>Michael Poole</h3>
             <div class="social-links">
                 <!--Social links-->
                 <a href="https://www.facebook.com/" target="_blank">
@@ -424,7 +394,6 @@
                     <i class="fa fa-dribbble"></i>
                 </a>
             </div>
-            <p>&copy; 2018 Morgan | All rights reserved.</p>
         </div>
         <!--.container-->
     </footer>
