changed banner image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
     <!--Start Home Section-->
-    <section class="home svg_shape bg_image" id="home" style="background-image: url(assets/images/banner-me.jpg)">
+    <section class="home svg_shape bg_image" id="home" style="background-image: url(assets/images/madrone.jpg)">
         <div class="full_height">
 
             <!-- nav -->
