added my projects to projects section

--- a/index.html
+++ b/index.html
@@ -184,48 +184,58 @@
             <div class="row">
 
                 <!--Service 1-->
-                <div class="col-md-3 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                    <div class="content">
-                        <div class="icon">
-                            <i class="fa fa-desktop"></i>
+                <div class="col-md-4 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                    <a href="https://michaelpoolelf.github.io/api-hackathon/" target="_blank">
+                        <div class="content project-image night-out">
+
+                            <!-- <div class="icon">
+                                <i class="fa fa-desktop"></i>
+                            </div> -->
+                            <!-- <h3>Web design</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                         </div>
-                        <h3>Web design</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </div>
+                    </a>
                 </div>
 
                 <!--Service 2-->
-                <div class="col-md-3 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 0.6s">
-                    <div class="content">
-                        <div class="icon">
-                            <i class="fa fa-magic"></i>
+                <div class="col-md-4 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 0.6s">
+                    <a href="https://wickedsales.michaeljohnpoole.com/" target="_blank">
+                        <div class="content project-image wicked-sales">
+
+
+                            <!-- <div class="icon">
+                                <i class="fa fa-magic"></i>
+                            </div> -->
+                            <!-- <h3>Graphic</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                         </div>
-                        <h3>Graphic</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </div>
+                    </a>
                 </div>
 
                 <!--Service 3-->
-                <div class="col-md-3 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 0.9s">
-                    <div class="content">
-                        <div class="icon">
-                            <i class="fa fa-camera"></i>
+                <div class="col-md-4 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 0.9s">
+                    <a href="https://fb.michaeljohnpoole.com/" target="_blank">
+                        <div class="content project-image fitness-buddy">
+
+                            <!-- <div class="icon">
+                                <i class="fa fa-camera"></i>
+                            </div> -->
+                            <!-- <h3>Photography</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                         </div>
-                        <h3>Photography</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </div>
+                    </a>
                 </div>
 
                 <!--Service 4-->
-                <div class="col-md-3 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 1.2s">
-                    <div class="content">
+                <!-- <div class="col-md-3 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 1.2s">
+                    <div class="content project-image">
                         <div class="icon">
                             <i class="fa fa-lightbulb-o"></i>
                         </div>
                         <h3>Branding</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </div>
-                </div>
+                </div> -->
 
             </div>
             <!--.row-->
