--- a/index.html
+++ b/index.html
@@ -257,65 +257,246 @@
             </div>
             <ul class="list-unstyled ul-filter">
                 <li data-filter="*" class="active_filter">all</li>
-                <li data-filter=".marketing">marketing</li>
-                <li data-filter=".photography">photography</li>
-                <li data-filter=".design">design</li>
+                <li data-filter=".marketing">Front-End</li>
+                <li data-filter=".photography">Back-End</li>
+                <li data-filter=".design">Tools</li>
             </ul>
             <div class="row grid">
 
                 <!--project 1-->
-                <div class="col-xs-12 col-sm-6 col-md-4 grid-sizer grid-item design">
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
                         <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <img src="assets/images/portfolio/1.jpg" alt=''>
+                            <p>HTML 5</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>CSS 3</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>JavaScript</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>jquery</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>Bootstrap</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>React</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item photography">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>Node</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item photography">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>Express</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item photography">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>PostgreSQL</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item photography">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>MySQL</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>NPM</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>Ubuntu</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>AWS</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>GIt</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>GitHub</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>VS Code</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>Figma</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>MeisterTask</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>DbDesigner</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>Webpack</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
+                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
+                            <p>Babel</p>
+                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
                         </div>
                     </div>
                 </div>
 
                 <!--project 2-->
-                <div class="col-xs-12 col-sm-6 col-md-4 grid-item marketing">
+                <!-- <div class="col-xs-12 col-sm-6 col-md-4 grid-item marketing">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
                         <div class="my_img" data-mfp-src="assets/images/portfolio/2.jpg">
                             <img src="assets/images/portfolio/2.jpg" alt=''>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!--project 3-->
-                <div class="col-xs-12 col-sm-6 col-md-4 grid-item photography">
+                <!-- <div class="col-xs-12 col-sm-6 col-md-4 grid-item photography">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
                         <div class="my_img" data-mfp-src="assets/images/portfolio/3.jpg">
                             <img src="assets/images/portfolio/3.jpg" alt=''>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!--project 4-->
-                <div class="col-xs-12 col-sm-6 col-md-4 grid-item design">
+                <!-- <div class="col-xs-12 col-sm-6 col-md-4 grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.4s">
                         <div class="my_img" data-mfp-src="assets/images/portfolio/4.jpg">
                             <img src="assets/images/portfolio/4.jpg" alt=''>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!--project 5-->
-                <div class="col-xs-12 col-sm-6 col-md-4 grid-item photography">
+                <!-- <div class="col-xs-12 col-sm-6 col-md-4 grid-item photography">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.4s">
                         <div class="my_img" data-mfp-src="assets/images/portfolio/5.jpg">
                             <img src="assets/images/portfolio/5.jpg" alt=''>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!--project 6-->
-                <div class="col-xs-12 col-sm-6 col-md-4 grid-item marketing">
+                <!-- <div class="col-xs-12 col-sm-6 col-md-4 grid-item marketing">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.4s">
                         <div class="my_img" data-mfp-src="assets/images/portfolio/6.jpg">
                             <img src="assets/images/portfolio/6.jpg" alt=''>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
             <!--.row-->
