--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="display-table">
                 <div class="display-table-cell">
                     <div class="container">
-                        <h3>Hello, I'm Michael Poole</h3>
+                        <h3>I am Michael Poole</h3>
                         <h1 class="cd-headline letters rotate-2 is-full-width">
                             <span class="cd-words-wrapper">
                                 <b class="is-visible">Developer</b>
