--- a/index.html
+++ b/index.html
@@ -266,237 +266,129 @@
                 <!--project 1-->
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>HTML 5</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>HTML 5</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>CSS 3</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>CSS 3</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>JavaScript</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>JavaScript</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>jquery</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>React</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>Bootstrap</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>Bootstrap</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item marketing">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>React</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>jquery</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item photography">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>Node</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>Node</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item photography">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>Express</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>Express</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item photography">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>PostgreSQL</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>PostgreSQL</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item photography">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>MySQL</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>MySQL</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>NPM</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>NPM</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>Ubuntu</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>Ubuntu</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>AWS</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>AWS</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>GIt</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>GIt</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>GitHub</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>GitHub</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>VS Code</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>VS Code</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>Figma</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>Figma</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>MeisterTask</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>MeisterTask</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>DbDesigner</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>DbDesigner</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>Webpack</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>Webpack</p>
                     </div>
                 </div>
 
                 <div class="col-xs-4 col-md-2 grid-sizer grid-item design">
                     <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/1.jpg">
-                            <p>Babel</p>
-                            <!-- <img src="assets/images/portfolio/1.jpg" alt=''> -->
-                        </div>
+                        <p>Babel</p>
                     </div>
                 </div>
-
-                <!--project 2-->
-                <!-- <div class="col-xs-12 col-sm-6 col-md-4 grid-item marketing">
-                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/2.jpg">
-                            <img src="assets/images/portfolio/2.jpg" alt=''>
-                        </div>
-                    </div>
-                </div> -->
-
-                <!--project 3-->
-                <!-- <div class="col-xs-12 col-sm-6 col-md-4 grid-item photography">
-                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/3.jpg">
-                            <img src="assets/images/portfolio/3.jpg" alt=''>
-                        </div>
-                    </div>
-                </div> -->
-
-                <!--project 4-->
-                <!-- <div class="col-xs-12 col-sm-6 col-md-4 grid-item design">
-                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.4s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/4.jpg">
-                            <img src="assets/images/portfolio/4.jpg" alt=''>
-                        </div>
-                    </div>
-                </div> -->
-
-                <!--project 5-->
-                <!-- <div class="col-xs-12 col-sm-6 col-md-4 grid-item photography">
-                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.4s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/5.jpg">
-                            <img src="assets/images/portfolio/5.jpg" alt=''>
-                        </div>
-                    </div>
-                </div> -->
-
-                <!--project 6-->
-                <!-- <div class="col-xs-12 col-sm-6 col-md-4 grid-item marketing">
-                    <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.4s">
-                        <div class="my_img" data-mfp-src="assets/images/portfolio/6.jpg">
-                            <img src="assets/images/portfolio/6.jpg" alt=''>
-                        </div>
-                    </div>
-                </div> -->
 
             </div>
             <!--.row-->
@@ -554,6 +446,13 @@
                             </div>
                         </div>
 
+                        <div class="content">
+                            <div>
+                                <h4>Check Out My Resume!</h4>
+                                <p><a href="https://drive.google.com/file/d/1V19OFMcZmvBhE-rVLH8eofCOC0KAJ1Fk/view" target="_blank">Click here</a></p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
@@ -572,17 +471,14 @@
             <h3>Michael Poole</h3>
             <div class="social-links">
                 <!--Social links-->
-                <a href="https://www.facebook.com/" target="_blank">
-                    <i class="fa fa-facebook"></i>
+                <a href="https://www.linkedin.com/in/michael-poole-074627120/" target="_blank">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </a>
-                <a href="https://twitter.com/" target="_blank">
-                    <i class="fa fa-twitter"></i>
+                <a href="https://github.com/MichaelPooleLF" target="_blank">
+                    <i class="fa fa-github" aria-hidden="true"></i>
                 </a>
-                <a href="https://plus.google.com/" target="_blank">
-                    <i class="fa fa-google"></i>
-                </a>
-                <a href="https://www.dribbble.com" target="_blank">
-                    <i class="fa fa-dribbble"></i>
+                <a href="https://www.facebook.com/michael.poole.315" target="_blank">
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
                 </a>
             </div>
         </div>
