--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <h1 class="cd-headline letters rotate-2 is-full-width">
                             <span class="cd-words-wrapper">
                                 <b class="is-visible">Developer</b>
-                                <b>Designer</b>
+                                <b>Engineer</b>
                             </span>
                         </h1>
                     </div>
