changed styling on projects

--- a/index.html
+++ b/index.html
@@ -186,56 +186,28 @@
                 <!--Service 1-->
                 <div class="col-md-4 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
                     <a href="https://michaelpoolelf.github.io/api-hackathon/" target="_blank">
-                        <div class="content project-image night-out">
-
-                            <!-- <div class="icon">
-                                <i class="fa fa-desktop"></i>
-                            </div> -->
-                            <!-- <h3>Web design</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
-                        </div>
+                        <div class="content project-image night-out rounded border-black"></div>
                     </a>
                 </div>
 
                 <!--Service 2-->
                 <div class="col-md-4 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 0.6s">
                     <a href="https://wickedsales.michaeljohnpoole.com/" target="_blank">
-                        <div class="content project-image wicked-sales">
-
-
-                            <!-- <div class="icon">
-                                <i class="fa fa-magic"></i>
-                            </div> -->
-                            <!-- <h3>Graphic</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
-                        </div>
+                        <div class="content project-image wicked-sales rounded border-black"></div>
                     </a>
                 </div>
 
                 <!--Service 3-->
                 <div class="col-md-4 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 0.9s">
                     <a href="https://fb.michaeljohnpoole.com/" target="_blank">
-                        <div class="content project-image fitness-buddy">
-
-                            <!-- <div class="icon">
-                                <i class="fa fa-camera"></i>
-                            </div> -->
-                            <!-- <h3>Photography</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                        <div class="content project-image fitness-buddy rounded border-black">
+                            <div class="absolute faded inner-rounded flex">
+                                <h2 class="white">Under</h2>
+                                <h2 class="white">Construction</h2>
+                            </div>
                         </div>
                     </a>
                 </div>
-
-                <!--Service 4-->
-                <!-- <div class="col-md-3 col-sm-6 item animated animated_scroll fadeInUp" style="animation-delay: 1.2s">
-                    <div class="content project-image">
-                        <div class="icon">
-                            <i class="fa fa-lightbulb-o"></i>
-                        </div>
-                        <h3>Branding</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </div>
-                </div> -->
 
             </div>
             <!--.row-->
@@ -415,7 +387,7 @@
                         <form action="send.php" method="post">
                             <input placeholder="Name" name="name" type="text" class="form-control">
                             <input placeholder="E-mail" name="email" type="email" class="form-control">
-                            <textarea placeholder="Message" name="message" class="form-control"></textarea>
+                            <textarea placeholder="Message" name="message" class="form-control no-resize"></textarea>
                             <div class="submit btn">send message</div>
                             <!--Contact form message-->
                             <div class="msg_success">
@@ -467,7 +439,7 @@
 
     <!--Start Footer-->
     <footer>
-        <div class="container text-center animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+        <div class="container text-center">
             <h3>Michael Poole</h3>
             <div class="social-links">
                 <!--Social links-->
