--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                     <a href="https://fb.michaeljohnpoole.com/" target="_blank">
                         <div class="content project-image fitness-buddy rounded border-black">
                             <div class="absolute faded inner-rounded flex">
-                                <h2 class="white">Under</h2>
-                                <h2 class="white">Construction</h2>
+                                <h2 class="white">Undergoing</h2>
+                                <h2 class="white">Updates</h2>
                             </div>
                         </div>
                     </a>
